@@ -24,7 +24,8 @@ int RetrCertMsg::process ()
     const char *certData;
 
     EMIT_ERROR_ERR_IF (_cfg == NULL);
-    EMIT_ERROR_ERR_IF (_client == NULL);
+    LIBENCLOUD_DELETE (_client);
+    LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
 
     EMIT_ERROR_ERR_IF (setupece::loadSslConfig(setupece::ProtocolTypeInit, _cfg, url, config));
 
@@ -56,6 +57,7 @@ int RetrCertMsg::process ()
 
     return 0;
 err:
+    LIBENCLOUD_DELETE(_client);
     return ~0;
 }
 
@@ -64,14 +66,12 @@ err:
 // 
 void RetrCertMsg::_clientComplete (const QString &response)
 {
-    // stop listening to signals from client
-    disconnect(_client, 0, this, 0);
-
     EMIT_ERROR_ERR_IF (_decodeResponse(response));
     EMIT_ERROR_ERR_IF (_unpackResponse());
 
     emit processed();
 err:
+    _client->deleteLater();
     return;
 }
 
