@@ -29,7 +29,8 @@ int RetrConfMsg::process ()
     QMap<QByteArray, QByteArray> headers;
 
     EMIT_ERROR_ERR_IF (_cfg == NULL);
-    EMIT_ERROR_ERR_IF (_client == NULL);
+    LIBENCLOUD_DELETE (_client);
+    LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
 
     EMIT_ERROR_ERR_IF (setupece::loadSslConfig(setupece::ProtocolTypeOp, _cfg, url, config));
 
@@ -45,6 +46,7 @@ int RetrConfMsg::process ()
 
     return 0;
 err:
+    LIBENCLOUD_DELETE(_client);
     return ~0;
 }
 
@@ -53,14 +55,12 @@ err:
 // 
 void RetrConfMsg::_clientComplete (const QString &response)
 {
-    // stop listening to signals from client
-    disconnect(_client, 0, this, 0);
-
     EMIT_ERROR_ERR_IF (_decodeResponse(response));
     EMIT_ERROR_ERR_IF (_unpackResponse());
 
     emit processed();
 err:
+    _client->deleteLater();
     return;
 }
 
