@@ -28,7 +28,8 @@ int LoginMsg::process ()
     QVariantMap data = _data.toMap();
 
     EMIT_ERROR_ERR_IF (_cfg == NULL);
-    EMIT_ERROR_ERR_IF (_client == NULL);
+    LIBENCLOUD_DELETE (_client);
+    LIBENCLOUD_ERR_IF ((_client = new Client) == NULL);
 
     if (!_sbAuth.isValid())
     {
@@ -56,8 +57,7 @@ int LoginMsg::process ()
     headers["User-Agent"] = LIBENCLOUD_USERAGENT_QIC;
     headers["Authorization"] =  headerData.toLocal8Bit();
 
-    // logout signals from client
-    disconnect(_client, 0, this, 0);
+    // setup signals from client
     connect(_client, SIGNAL(error(libencloud::Error)), this, SIGNAL(error(libencloud::Error)));
     connect(_client, SIGNAL(complete(QString)), this, SLOT(_clientComplete(QString)));
 
@@ -65,6 +65,7 @@ int LoginMsg::process ()
 
     return 0;
 err:
+    LIBENCLOUD_DELETE(_client);
     return ~0;
 }
 
@@ -90,14 +91,13 @@ void LoginMsg::_clientComplete (const QString &response)
 {
     LIBENCLOUD_TRACE;
 
-    // stop listening to signals from client
-    disconnect(_client, 0, this, 0);
-
     LIBENCLOUD_ERR_IF (_decodeResponse(response));
     LIBENCLOUD_ERR_IF (_unpackResponse());
 
     emit processed();
+
 err:
+    _client->deleteLater();
     return;
 }
 
