@@ -3,6 +3,7 @@ include(../common.pri)
 TEMPLATE = subdirs
 
 SUBDIRS += unit
+SUBDIRS += unit-sec
 
 !nogui:SUBDIRS += sece
 
