@@ -1,0 +1,36 @@
+include(../../common.pri)
+
+TEMPLATE = app
+
+# external prog - don't exports dlls
+DEFINES -= _LIBENCLOUD_LIB_
+
+TARGET = unit-sec
+
+CONFIG += gui
+CONFIG += console
+CONFIG += qtestlib
+
+SOURCES += main.cpp
+
+SOURCES += sec.cpp
+HEADERS += sec.h
+
+INCLUDEPATH += $$SRCBASEDIR/src/
+DEPENDPATH += $$SRCBASEDIR/src/
+
+# libencloud
+LIBS += -L$$SRCBASEDIR/src/$$DESTDIR
+LIBS += -lencloud$$DBG_SUFFIX
+
+# json - external linkage only for QJson
+contains(CONFIG, qjson) {
+    LIBS += -lqjson
+}
+
+# command to run upon 'make check'
+# LIBENCLOUD_WRAP environment variable can be set to "gdb", "valgrind", etc
+check.commands = LD_LIBRARY_PATH=:$$SRCBASEDIR/src:$$LIBDIR $$(LIBENCLOUD_WRAP) ./$$TARGET
+
+target.path = $${BINDIR}
+INSTALLS += target
