@@ -5,6 +5,8 @@ libencloud 0.7:
 	- api: rename '/api_v1' => '/api/v1'
 	- client: new get(), post() functions
 	- config: "init"/"op" under new "ssl" key, handle absolute and relative paths
+	- setup: avoid reusing client objects to prevent QNetworkAccessManager from
+	  caching CA certificates
 
 libencloud 0.6.4 (10/06/2014):
 	- [CONNECT-115] Slow disconnect on w32
